// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EggSac > hatching rates MISS "Hatched", costs 6 vitals, releases brood + 2 spiderlings up to the cap of 6; the 3 s swell warning is said once per sac 1`] = `
"2.02 initial EggSac brood=3 @(560,410)
2.02 initial EggSac brood=2 @(760,410)
11.02 flag eggsac-1
11.02 say "That sac is swelling… it’s about to hatch!"
11.02 say "instruction"
13.02 flag eggsac-2
13.02 say "That sac is swelling… it’s about to hatch!"
13.02 say "instruction"
14.02 spawn SpiderlingGrub @(574,410)
14.02 spawn SpiderlingGrub @(564,423)
14.02 spawn SpiderlingGrub @(549,418)
14.02 spawn SpiderlingGrub @(549,402)
14.02 spawn SpiderlingGrub @(564,397)
14.02 spawn Laceration source=blade length=38 bleed=0.6 @(560,410)
14.02 rate MISS "Hatched" +0 combo=0
14.02 hurt 6
14.02 popup "-6"
16.02 spawn SpiderlingGrub @(774,410)
16.02 spawn Laceration source=blade length=38 bleed=0.6 @(760,410)
16.02 rate MISS "Hatched" +0 combo=0
16.02 hurt 6
16.02 popup "-6"
17.02 -- hatched: status=running vitals=75.9 score=0 combo=0 counts=0/0/0/2 live=[SpiderlingGrub,SpiderlingGrub,SpiderlingGrub,SpiderlingGrub,SpiderlingGrub,Laceration,SpiderlingGrub,Laceration]
"
`;

exports[`EggSac > lancing with 8 s or less left is GOOD "Lanced" 1`] = `
"2.02 initial EggSac brood=3 @(660,410)
12.52 cue squelch
12.52 rate GOOD "Lanced" +63 combo=1
12.52 flag eggsac-lanced
12.52 say "Spiderlings! Brand them before they scatter!"
12.52 say "instruction"
12.52 spawn SpiderlingGrub @(674,410)
12.52 spawn SpiderlingGrub @(653,422)
12.52 spawn SpiderlingGrub @(653,398)
12.52 spawn Laceration source=blade length=18 bleed=0.2 @(660,410)
"
`;

exports[`EggSac > lancing with more than 8 s before hatching is COOL "Lanced"; spiderlings spill out, leaving an 18 px nick (GAM-0197) 1`] = `
"2.02 initial EggSac brood=3 @(660,410)
2.02 cue squelch
2.02 rate COOL "Lanced" +105 combo=1
2.02 flag eggsac-lanced
2.02 say "Spiderlings! Brand them before they scatter!"
2.02 say "instruction"
2.02 spawn SpiderlingGrub @(674,410)
2.02 spawn SpiderlingGrub @(653,422)
2.02 spawn SpiderlingGrub @(653,398)
2.02 spawn Laceration source=blade length=18 bleed=0.2 @(660,410)
2.05 -- lanced: status=running vitals=99 score=105 combo=1 counts=1/0/0/0 live=[SpiderlingGrub,SpiderlingGrub,SpiderlingGrub,Laceration]
"
`;

exports[`Grub & SpiderlingGrub > a brand hold sears a grub: COOL "Seared" 1`] = `
"2.02 initial Grub speed=40 @(660,410)
2.80 cue burn
2.80 rate COOL "Seared" +105 combo=1
2.83 -- after brand: status=running vitals=98.7 score=105 combo=1 counts=1/0/0/0 live=[]
"
`;

exports[`Grub & SpiderlingGrub > a spiderling sears faster (0.25 s): COOL "Seared" 1`] = `
"2.02 initial SpiderlingGrub @(660,410)
2.27 cue burn
2.27 rate COOL "Seared" +105 combo=1
"
`;

exports[`Grub & SpiderlingGrub > the tongs pluck a grub off the body: GOOD "Plucked"; released on the body it stays 1`] = `
"2.02 initial Grub speed=40 @(660,410)
2.02 cue pluck
2.15 cue pluck
2.70 rate GOOD "Plucked" +63 combo=1
2.72 -- after pluck: status=running vitals=98.8 score=63 combo=1 counts=0/1/0/0 live=[]
"
`;

exports[`Sigil > bell: breaking it fast is COOL "Curse broken" 1`] = `
"2.02 initial Sigil @(660,410)
3.00 cue burn
3.00 popup "Stroke 1"
3.02 cue burn
3.03 cue burn
3.47 cue burn
3.57 cue burn
3.73 cue burn
3.82 cue burn
3.83 cue burn
5.00 cue burn
5.00 popup "Stroke 2"
5.08 cue burn
5.10 cue burn
6.23 cue burn
6.23 popup "Stroke 3"
6.25 cue burn
6.33 rate COOL "Curse broken" +105 combo=1
6.38 -- seared: status=running vitals=97.3 score=105 combo=1 counts=1/0/0/0 live=[] segs=10
"
`;

exports[`Sigil > breaking it slower than par (strokes × (node hold + 3 s)) is GOOD 1`] = `
"2.02 initial Sigil @(660,410)
3.00 cue burn
3.00 popup "Stroke 1"
3.02 cue burn
3.03 cue burn
7.08 popup "The sigil knits back!"
7.08 flag sigil-regress
7.08 say "Don’t stop half-way — the curse heals what you leave!"
7.08 say "instruction"
12.07 cue burn
12.07 popup "Stroke 1"
12.47 cue burn
12.57 cue burn
12.73 cue burn
12.80 cue burn
12.83 cue burn
13.93 cue burn
13.93 popup "Stroke 2"
14.07 rate GOOD "Curse broken" +63 combo=1
14.12 -- seared late: status=running vitals=94.2 score=63 combo=1 counts=0/1/0/0 live=[]
"
`;

exports[`Sigil > choir: breaking it fast is COOL "Curse broken" 1`] = `
"2.02 initial Sigil @(660,410)
3.00 cue burn
3.00 popup "Stroke 1"
3.02 cue burn
3.03 cue burn
4.37 cue burn
4.37 popup "Stroke 2"
4.48 cue burn
5.55 cue burn
5.55 popup "Stroke 3"
5.60 cue burn
6.77 cue burn
6.77 popup "Stroke 4"
6.80 cue burn
6.88 cue burn
6.90 cue burn
6.92 rate COOL "Curse broken" +105 combo=1
6.97 -- seared: status=running vitals=97 score=105 combo=1 counts=1/0/0/0 live=[] segs=5
"
`;

exports[`Sigil > crown: breaking it fast is COOL "Curse broken" 1`] = `
"2.02 initial Sigil @(660,410)
3.00 cue burn
3.00 popup "Stroke 1"
3.02 cue burn
3.03 cue burn
3.45 cue burn
3.55 cue burn
3.72 cue burn
3.80 cue burn
3.82 cue burn
4.00 cue burn
4.02 cue burn
4.10 rate COOL "Curse broken" +105 combo=1
4.17 -- seared: status=running vitals=98.2 score=105 combo=1 counts=1/0/0/0 live=[] segs=7
"
`;

exports[`Sigil > eye: breaking it fast is COOL "Curse broken" 1`] = `
"2.02 initial Sigil @(660,410)
3.00 cue burn
3.00 popup "Stroke 1"
3.02 cue burn
3.03 cue burn
3.45 cue burn
3.55 cue burn
3.72 cue burn
3.80 cue burn
4.87 cue burn
4.87 popup "Stroke 2"
4.88 cue burn
5.00 rate COOL "Curse broken" +105 combo=1
5.05 -- seared: status=running vitals=97.8 score=105 combo=1 counts=1/0/0/0 live=[] segs=7
"
`;

exports[`Sigil > hourglass: breaking it fast is COOL "Curse broken" 1`] = `
"2.02 initial Sigil @(660,410)
3.00 cue burn
3.00 popup "Stroke 1"
3.02 cue burn
3.03 cue burn
3.43 cue burn
3.52 cue burn
3.68 cue burn
3.75 cue burn
3.77 cue burn
3.95 cue burn
3.97 cue burn
4.07 cue burn
4.07 rate COOL "Curse broken" +105 combo=1
4.15 -- seared: status=running vitals=98.2 score=105 combo=1 counts=1/0/0/0 live=[] segs=4
"
`;

exports[`Sigil > key: breaking it fast is COOL "Curse broken" 1`] = `
"2.02 initial Sigil @(660,410)
3.00 cue burn
3.00 popup "Stroke 1"
3.02 cue burn
3.03 cue burn
4.28 cue burn
4.28 popup "Stroke 2"
4.47 cue burn
4.57 cue burn
5.68 cue burn
5.68 popup "Stroke 3"
5.80 cue burn
5.88 cue burn
5.90 cue burn
5.90 rate COOL "Curse broken" +105 combo=1
5.95 -- seared: status=running vitals=97.5 score=105 combo=1 counts=1/0/0/0 live=[] segs=6
"
`;

exports[`Sigil > lashes for 4 vitals every lashEvery seconds (5 by default, 4.5 in op2-4) with a popup 1`] = `
"2.02 initial Sigil @(660,410)
7.03 hurt 4
7.03 popup "-4"
7.03 popup "The curse lashes out!"
12.05 hurt 4
12.05 popup "-4"
12.05 popup "The curse lashes out!"
"
`;

exports[`Sigil > trident: breaking it fast is COOL "Curse broken" 1`] = `
"2.02 initial Sigil @(660,410)
3.00 cue burn
3.00 popup "Stroke 1"
3.02 cue burn
3.03 cue burn
4.35 cue burn
4.35 popup "Stroke 2"
4.47 cue burn
4.57 cue burn
4.73 cue burn
4.78 rate COOL "Curse broken" +105 combo=1
4.83 -- seared: status=running vitals=97.9 score=105 combo=1 counts=1/0/0/0 live=[] segs=4
"
`;

exports[`Sigil > wheel: breaking it fast is COOL "Curse broken" 1`] = `
"2.02 initial Sigil @(660,410)
3.00 cue burn
3.00 popup "Stroke 1"
3.02 cue burn
3.03 cue burn
3.45 cue burn
3.55 cue burn
3.72 cue burn
3.80 cue burn
3.82 cue burn
4.87 cue burn
4.87 popup "Stroke 2"
5.03 cue burn
5.05 cue burn
6.12 cue burn
6.12 popup "Stroke 3"
6.20 cue burn
6.27 rate COOL "Curse broken" +105 combo=1
6.32 -- seared: status=running vitals=97.3 score=105 combo=1 counts=1/0/0/0 live=[] segs=8
"
`;
